--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                <i class="fas fa-map-signs"></i>
              </div>
              <div class="data">
-                Patel Nagar<br /> Dehradun
+                Janti Kalan Sonepat<br /> Haryana 131028
              </div>
            </li>
            <li>
