--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
              </div>
              <div class="data">
                <p class="semi-bold">Twitter</p>
-               <p>  https://twitter.com/MaanS1313</p>
+               <p>  <a href=" https://twitter.com/MaanS1313" target="_blank" style="color:#b1eaff;"> https://twitter.com/MaanS1313</a></p>
              </div>
            </li>
            <li>
@@ -107,7 +107,7 @@
              </div>
              <div class="data">
                <p class="semi-bold">Linkedin</p>
-               <p> Linkedin:- http://linkedin.com/in/mohit-kumar-maan-30a247187 </p>
+               <p> <a href="http://linkedin.com/in/mohit-kumar-maan-30a247187" target="_blank" style="color:#b1eaff;"> http://linkedin.com/in/mohit-kumar-maan-30a247187</a> </p>
              </div>
            </li>
          </ul>
