--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
            <p class="bold">MAIN STRENGTH</p>
          </div>
          <ul> 
-             <li>Better understanding of consumer mind & deals with them perfectly with several linguistic pattern.</li>
+             <li>Constumer Relationship.</li>
              <li>Ability to motivate myself to perform better all the time.</li>
-             <li>Versatile professional who adapts to changing environment rapidly. Possess excellent team participation.</li>
-             <li>A systematic, hardworking, amiable and dedicated team player with analytical bend of mind.</li>
+             <li>Flexibility to Change.</li>
+             <li>Quick Learner and Team Worker who gets the work done.</li>
              <li>Able to come up with unusual or clever ideas about a given topic or situation, or to develop creative ways to solve a problem.</li>
          </ul>
        
@@ -194,8 +194,8 @@
            <p class="bold">ACADEMIC PROJECTS</p>
          </div>
       <ul>
-        <li>My first project is Green Peace which we create with the help of the HTML, CSS, JAVASCRIPT, PHP, SQL Database. In this project we describe the about the NOGO And Environment. There are four members in the project.</li>
-        <li>My Second Project Integrated framework for Analysis & Visualization of Student activity in alignment with the Skills Build Courses & attendance. In this project we Analysis &Visualization the Data with Excel and Python. There are the five members.</li> 
+        <li>My first project is Green Peace which we create with the help of the HTML, CSS, JAVASCRIPT, PHP, SQL Database. In this project we describe the about the NGO And Environment.This is a team project of four member.</li>
+        <li>My Second Project Integrated framework for Analysis & Visualization of Student activity in alignment with the Skills Build Courses & attendance. In this project we Analysis &Visualization the Data with Excel and Python. This is a team project of four member.</li> 
       </ul>
 
 
