--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
            <p class="bold">MAIN STRENGTH</p>
          </div>
          <ul> 
-             <li>Constumer Relationship.</li>
+             <li>Customer Relationship.</li>
              <li>Ability to motivate myself to perform better all the time.</li>
              <li>Flexibility to Change.</li>
              <li>Quick Learner and Team Worker who gets the work done.</li>
-             <li>Able to come up with unusual or clever ideas about a given topic or situation, or to develop creative ways to solve a problem.</li>
+             <li>Able to Resolve the problem very soon.</li>
          </ul>
        
          <div class="resume_item resume_work">
